# instagram-media-downloader

./: README.md  pyproject.toml
.kiro/specs/ig-media-downloader/: design.md  requirements.md  tasks.md
ig_media_downloader/: __init__.py  __main__.py  downloader.py  logger.py  main.py  models.py
tests/: __init__.py  conftest.py  test_downloader.py  test_integration.py  test_models.py  test_url_download.py
