[project]
name = "ig-media-downloader"
version = "0.1.0"
description = "Download Instagram user media using instaloader"
requires-python = ">=3.13"
dependencies = [
    "instaloader>=4.10",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[project.scripts]
ig-download = "ig_media_downloader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
